# ical-to-json-rs

./: Cargo.toml
src/: main.rs
