[package]
name = "ical-to-json-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", default-features = false, features = ["serde", "libc", "iana-time-zone", "clock", "std", "arbitrary"] }
ical = { version = "0.8.0", default-features = false, features = ["ical"] }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls", "blocking", "gzip"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
